Add code examples to native functions chapter
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/basics/native-functions.tex
+++ b/shared/latex/python/basics/native-functions.tex
@@ -5,23 +5,27 @@
 \end{frame}
 
 \begin{frame}{Création et conversion de types natifs}
-  \texttt{int}, \texttt{str}, \texttt{float}, …
+  \pycon{python/basics/native-functions/basic-types}
 \end{frame}
 
-\begin{frame}{Différents mécanismes d'itération}
-  \texttt{all}, \texttt{any}, \texttt{range}, \texttt{sum}, …
+\begin{frame}{Mécanismes d'itération}
+  \pycon{python/basics/native-functions/iteration}
+\end{frame}
+
+\begin{frame}{Mécanismes d'agrégation}
+  \pycon{python/basics/native-functions/aggregation}
 \end{frame}
 
 \begin{frame}{Manipulation d'objets}
-  \texttt{setattr}, \texttt{delattr}, …
+  \pycon{python/basics/native-functions/objects}
 \end{frame}
 
 \begin{frame}{Test d'appartenance à une classe}
-  \texttt{isinstance}, \texttt{issubclass}, \texttt{type}
+  \pycon{python/basics/native-functions/type-checking}
 \end{frame}
 
 \begin{frame}{Opérations de base}
-  \texttt{divmod}, \texttt{pow}
+  \pycon{python/basics/native-functions/basic-operations}
 \end{frame}
 
 \begin{frame}{Méthode d'apprentissage}
