Improve sys-admin slightly
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/sys-admin/files.tex
+++ b/shared/latex/python/sys-admin/files.tex
@@ -9,16 +9,14 @@
   \end{description}
 \end{frame}
 
-\begin{frame}{Navigation}
-  Le module \texttt{pathlib} permet de naviguer facilement dans le système de fichier~:
-
-  \mintedcustom{python/files/navigation}{py}{text}
+\begin{frame}{Navigation ⋅ Module \texttt{pathlib}}
+  \pycon{python/files/navigation}
 \end{frame}
 
 \begin{frame}{Utilisation de jokers}
-  Il est possible d'utiliser des jokers grâce à la fonction \texttt{pathlib.Path.glob}~:
+  Il est possible d'utiliser des jokers grâce aux fonctions \texttt{pathlib.Path.glob} \& \texttt{pathlib.Path.rglob}~:
 
-  \mintedcustom{python/files/search}{py}{text}
+  \pycon{python/files/search}
 \end{frame}
 
 \begin{frame}{Reste de l'API \texttt{pathlib}}
