Reduce width of numpy code examples to avoid overflow when using Fira Mono
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/data-science/numpy.tex
+++ b/shared/latex/python/data-science/numpy.tex
@@ -1,7 +1,7 @@
 \begin{frame}{Introduction}
   \texttt{numpy} est une librairie centrée sur un concept~: le tableau multidimensionnel.
 
-  La manipulation de tableaux \texttt{numpy} est très rapide~: on constate des améliorations de ×100 à ×500 par rapport à des listes Python.
+  La manipulation de tableaux \texttt{numpy} est très rapide~: on constate des améliorations de $\times 100$ à $\times 500$ par rapport à des listes Python.
 \end{frame}
 
 \begin{frame}{Import de \texttt{numpy}}
