--- a/shared/latex/python/data-science/matplotlib.tex
+++ b/shared/latex/python/data-science/matplotlib.tex
@@ -1,6 +1,6 @@
 \begin{frame}{Introduction}
 
-    \emph{Matplotlib} est la librairie graphique de référence pour la visualisation 2D (la seule ?).
+    \texttt{matplotlib} est la librairie graphique de référence pour la visualisation 2D (la seule ?).
     
     Un très grand nombre de librairies gravitent autour de matplotlib pour répondre à différents besoins et différents domaines.
 \end{frame}
@@ -106,13 +106,13 @@
 
 \begin{frame}{Anatomie d'une figure}
     \begin{minipage}{0.49\linewidth}
-        \begin{itemize}
-            \item \textbf{\alert{Figure}}~: Structure de plus haut niveau qui contiendra tous les éléments à afficher
-            \item \textbf{\alert{Axe}}~: Élément contenant un graphique. Un ou plusieurs \texttt{axes} par \texttt{figure}
-            \item \textbf{\alert{Spine}}~: Cadre d'un \texttt{axe}   
-            \item \textbf{\alert{Legend}}~: Légende associée à un \texttt{axe}   
-            \item \textbf{\alert{Title}}~: Titre associé à un \texttt{axe}   
-        \end{itemize}
+        \begin{description}
+          \item[Figure] Structure de plus haut niveau qui contiendra tous les éléments à afficher
+          \item[Axes] Élément contenant un graphique. Un ou plusieurs \texttt{axes} par \texttt{figure}
+          \item[Spine] Cadre d'un \texttt{axe}
+          \item[Legend] Légende associée à un \texttt{axe}
+          \item[Title] Titre associé à un \texttt{axe}
+      \end{description}
     \end{minipage}
     \begin{minipage}{0.49\linewidth}
         \V{["plt/mpl/anatomy", "tw", 1] | image}
@@ -121,12 +121,12 @@
 
 \begin{frame}{Anatomie d'une figure}
     \begin{minipage}{0.49\linewidth}
-        \begin{itemize}
-            \item \textbf{\alert{Suptitle}}~: Titre associé à une \texttt{figure}
-            \item \textbf{\alert{Label}}~: Descripteur d'\texttt{axe} associé à l'axe \texttt{x} et \texttt{y}    
-            \item \textbf{\alert{Tick}} (Major,Minor)~: Marqueur sur les spines pour représenter l'échelle des valeurs   
-            \item \textbf{\alert{Grid}}~: Grille affichée sur la visualisation   
-        \end{itemize}
+        \begin{description}
+            \item[Suptitle] Titre associé à une \texttt{figure}
+            \item[Label] Descripteur d'\texttt{axe} associé à l'axe \texttt{x} et \texttt{y}
+            \item[Tick] Marqueur sur les spines pour représenter l'échelle des valeurs
+            \item[Grid] Grille affichée sur la visualisation
+        \end{description}
     \end{minipage}
     \begin{minipage}{0.49\linewidth}
         \V{["plt/mpl/anatomy", "tw", 1] | image}
@@ -218,6 +218,6 @@
         \item \bluelink{https://matplotlib.org/cheatsheets/handout-tips.pdf}{Supplémentaire, quelques astuces}
       \end{itemize}
     \item \bluelink{https://github.com/rougier/scientific-visualization-book}{Livre niveau intermédiaire/avancé sur \texttt{matplotlib}}
-    \item \bluelink{https://pyviz.org/}{Pyviz : Liste des librairies dépendantes de matplotlib}
+    \item \bluelink{https://pyviz.org/}{Pyviz~: liste des librairies dépendantes de \texttt{matplotlib}}
   \end{itemize}
 \end{frame}
