Tweak pandas so that code examples fit with Fira Mono
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/data-science/pandas.tex
+++ b/shared/latex/python/data-science/pandas.tex
@@ -65,13 +65,9 @@
 \end{frame}
 
 \begin{frame}{Création de \texttt{DataFrame} ⋅ Index par défaut}
-  Méthodes de création les plus utilisées~: respectivement par colonnes et par lignes.
+  Méthodes les plus utilisées~: par colonnes et par lignes.
 
   \mintedcustomcode{python/data-science/pandas/creation-dataframe-no-index}{pycon}
-
-  Il en existe de nombreuses autres, à consulter dans la documentation officielle.
-
-  Quand on ne spécifie pas d'index, l'index créé est équivalent à \texttt{range(n\_rows)}.
 \end{frame}
 
 \begin{frame}{Création de \texttt{DataFrame} ⋅ Index explicite}
