Fix very serious vandalism 😨
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/actors/chine.tex
+++ b/shared/latex/actors/chine.tex
@@ -1,6 +1,8 @@
-\begin{frame}
-  \V{["img/chine-s-eveille", "tw", 1] | image}
-\end{frame}
+\notmog{
+  \begin{frame}
+    \V{["img/chine-s-eveille", "tw", 1] | image}
+  \end{frame}
+}
 
 \begin{frame}{Leader futur dans l'IA}
   \begin{itemize}
