--- a/shared/latex/engineering/data-sources.tex
+++ b/shared/latex/engineering/data-sources.tex
@@ -1,6 +1,8 @@
-\begin{frame}{Sources de données}
-  \V{["img/trends-bigdata-ml", "tw", 1.0] | image}
-\end{frame}
+\notmog{
+  \begin{frame}{Sources de données}
+    \V{["img/trends-bigdata-ml", "tw", 1.0] | image}
+  \end{frame}
+}
 
 \begin{frame}{Formats de données}
   \begin{itemize}
