--- a/shared/latex/nlp/preprocessing.tex
+++ b/shared/latex/nlp/preprocessing.tex
@@ -1,5 +1,4 @@
-\begin{frame}
-  \frametitle{Collecte}
+\begin{frame}{Collecte}
   Des sources variées :
   \begin{itemize}
   \item Wikipedia
@@ -55,24 +54,21 @@
   \end{tabular}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Outlis --- WordNet}
+\begin{frame}{Outlis --- WordNet}
   \V{["img/wordnet-1", "th", 0.7] | image}  
   Projet sur le français : WOLF (Wordnet Libre du Français) 
 \end{frame}
 
-\begin{frame}
-  \frametitle{Outils --- DBpedia}
+\begin{frame}{Outils --- DBpedia}
   \V{["img/dbpedia", "tw", 0.9] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Utilisation actuelle}
-  \V{["img/chatbot", "tw", 0.9] | image}
-\end{frame}
+\notmog{
+  \begin{frame}{Utilisation actuelle}
+    \V{["img/chatbot", "tw", 0.9] | image}
+  \end{frame}
 
-\begin{frame}
-  \frametitle{Maintenabilité}
-  \V{["img/usine-a-gaz", "tw", 0.9] | image}
-\end{frame}
-
+  \begin{frame}{Maintenabilité}
+    \V{["img/usine-a-gaz", "tw", 0.9] | image}
+  \end{frame}
+}
