--- a/shared/latex/nn/rnn/variants.tex
+++ b/shared/latex/nn/rnn/variants.tex
@@ -33,6 +33,8 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}{D'autres variantes}
-  \V{["img/spaghetti", "tw", 1] | image}
-\end{frame}
+\notmog{
+  \begin{frame}{D'autres variantes}
+    \V{["img/spaghetti", "tw", 1] | image}
+  \end{frame}
+}
