--- a/shared/latex/nn/transformer/model.tex
+++ b/shared/latex/nn/transformer/model.tex
@@ -4,9 +4,11 @@
   \end{center}
 \end{frame}
 
-\begin{frame}{Réseaux transformeurs}
-  \V{["img/transformer-fun", "tw", 0.9] | image}
-\end{frame}
+\notmog{
+  \begin{frame}{Réseaux transformeurs}
+    \V{["img/transformer-fun", "tw", 0.9] | image}
+  \end{frame}
+}
 
 \begin{frame}{Vue générale}
   \V{["img/transformer-network-1", "tw", 0.9] | image}
