--- a/shared/latex/nlp/preprocessing.tex
+++ b/shared/latex/nlp/preprocessing.tex
@@ -67,7 +67,9 @@
   \begin{frame}{Utilisation actuelle}
     \V{["img/chatbot", "tw", 0.9] | image}
   \end{frame}
+}
 
+\notmog{
   \begin{frame}{Maintenabilité}
     \V{["img/usine-a-gaz", "tw", 0.9] | image}
   \end{frame}
