Fix overflows and minor other things for DPL
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/nn/cnn/tp.tex
+++ b/shared/latex/nn/cnn/tp.tex
@@ -1,8 +1,6 @@
-\begin{frame}{Instructions}
-  \begin{center}
-    \begin{itemize}
-      \item \bluelink{https://colab.research.google.com/drive/1xLFNAWBJxmp0GBcRhmwKfZUbewBDq4hz\#forceEdit=true&sandboxMode=true}{CNN avec Keras sur les données Landscape}
-      \item \bluelink{https://colab.research.google.com/drive/1AarpBtVUUi2DpOd20kF3LHg-bKLM7h_4\#forceEdit=true&sandboxMode=true}{CNN avec Keras sur les données Emotions}
-    \end{itemize}
-  \end{center}
+\begin{frame}{Travaux pratiques}
+  \begin{enumerate}
+    \item \bluelink{https://colab.research.google.com/drive/1xLFNAWBJxmp0GBcRhmwKfZUbewBDq4hz\#forceEdit=true&sandboxMode=true}{Instructions, données paysages}
+    \item \bluelink{https://colab.research.google.com/drive/1AarpBtVUUi2DpOd20kF3LHg-bKLM7h_4\#forceEdit=true&sandboxMode=true}{Instructions, données émotions}
+  \end{enumerate}
 \end{frame}
