--- a/shared/latex/nn/deep-optimize.tex
+++ b/shared/latex/nn/deep-optimize.tex
@@ -18,7 +18,7 @@
 \begin{frame}{Disparition des gradients}
   Vanishing Gradient $\Rightarrow$ utilisation de ReLu plutôt que les sigmoïdes
   \vfill
-  \V{["tikz/activations/relu", "tw", 1] | image}
+  \V{["tikz/activations/relu", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}{Explosion des gradients}
