--- a/shared/latex/nn/transformer/text-tp.tex
+++ b/shared/latex/nn/transformer/text-tp.tex
@@ -1,6 +1,3 @@
-\begin{frame}
-  \frametitle{~}
-  \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1KHpTeKkGwuKHoWdgoXA_0jLmnbr-ZPLJ\#forceEdit=true&sandboxMode=true}{Décodage avec les réseaux transformeurs}
-  \end{center}
+\begin{frame}{Travaux pratiques}
+  \bluelink{https://colab.research.google.com/drive/1KHpTeKkGwuKHoWdgoXA_0jLmnbr-ZPLJ\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
