--- a/shared/latex/tf-keras/tp-keras.tex
+++ b/shared/latex/tf-keras/tp-keras.tex
@@ -1,5 +1,5 @@
-\begin{frame}{Instructions}
+\begin{frame}{Travaux pratiques}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1Eslst_uJnqijNVNSR654RzEHet7Lcrr_\#forceEdit=true&sandboxMode=true}{Keras TP}
+    \bluelink{https://colab.research.google.com/drive/1Eslst_uJnqijNVNSR654RzEHet7Lcrr_\#forceEdit=true&sandboxMode=true}{Instructions}
   \end{center}
 \end{frame}
