--- a/shared/latex/nn/ae/autoencoder.tex
+++ b/shared/latex/nn/ae/autoencoder.tex
@@ -1,10 +1,10 @@
 \begin{frame}{Schéma général}
-  \V{["tikz/neural-networks/ae/autoencoder-schema", "tw", 0.9] | image}
+  \V{["tikz/neural-networks/ae/autoencoder-schema", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Cas linéaire}
   Activations linéaires et fonction de perte moindre carrés $\approx$ ACP
-  \V{["img/pca-nuage", "tw", 0.5] | image}
+  \V{["img/pca-nuage", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}{Cas linéaire}
@@ -13,13 +13,13 @@
 
 \begin{frame}{Auto-encodeurs profonds}
   Aussi appelées auto-encodeurs empilés.
-  \V{["tikz/neural-networks/ae/autoencoder-stacked", "tw", 0.9] | image}
+  \V{["tikz/neural-networks/ae/autoencoder-stacked", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Auto-encodeurs débruiteurs}
-  \V{["tikz/neural-networks/ae/denoiser", "tw", 1.1] | image}
+  \V{["tikz/neural-networks/ae/denoiser", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Auto-encodeurs variationnels}
-  \V{["tikz/neural-networks/ae/variational", "tw", 0.9] | image}
+  \V{["tikz/neural-networks/ae/variational", "th", 0.7] | image}
 \end{frame}
