--- a/shared/latex/nn/ae/tp.tex
+++ b/shared/latex/nn/ae/tp.tex
@@ -1,8 +1,6 @@
-\begin{frame}{Instructions}
-  \begin{center}
-    \begin{itemize}
-      \item \bluelink{https://colab.research.google.com/drive/1ALCyDov1v00Nk1qrIKDqWYNbHgG66L_M\#forceEdit=true&sandboxMode=true}{Auto-encodeurs simples avec Keras}
-      \item \bluelink{https://colab.research.google.com/drive/1wLL0PVm8_bCwFsVUMSfqdPaQ1eFSfrwj\#forceEdit=true&sandboxMode=true}{Auto-encodeurs débruiteurs avec Keras}
-    \end{itemize}    
-  \end{center}
+\begin{frame}{Travaux pratiques}
+  \begin{enumerate}
+    \item \bluelink{https://colab.research.google.com/drive/1ALCyDov1v00Nk1qrIKDqWYNbHgG66L_M\#forceEdit=true&sandboxMode=true}{Instructions, auto-encodeurs simples}
+    \item \bluelink{https://colab.research.google.com/drive/1wLL0PVm8_bCwFsVUMSfqdPaQ1eFSfrwj\#forceEdit=true&sandboxMode=true}{Instructions, auto-encodeurs débruiteurs}
+  \end{enumerate}
 \end{frame}
