--- a/shared/latex/nn/cnn/demo-task.tex
+++ b/shared/latex/nn/cnn/demo-task.tex
@@ -1,6 +1,6 @@
 \begin{frame}{Démonstration}
   \centering
-  \begin{itemize}[<+->]
+  \begin{itemize}
     \item \bluelink{https://reiinakano.com/arbitrary-image-stylization-tfjs/}{Styling}
     \item \bluelink{https://github.com/jiny2001/dcscn-super-resolution}{Super-résolution}
     \item \bluelink{https://richzhang.github.io/colorization/}{Colorisation}
