--- a/shared/latex/tf-keras/tp-tf.tex
+++ b/shared/latex/tf-keras/tp-tf.tex
@@ -1,3 +1,3 @@
-\begin{frame}{Instructions}
-  \bluelink{https://colab.research.google.com/drive/1qAvohjjhQpb7xLNmVxLwI1UBhC5KfSyQ\#forceEdit=true&sandboxMode=true}{Réseaux de neurones avec une API Tensorflow de Base}
+\begin{frame}{Travaux pratiques}
+  \bluelink{https://colab.research.google.com/drive/1qAvohjjhQpb7xLNmVxLwI1UBhC5KfSyQ\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
