Translates "versatile" to "polyvalent"

--- a/shared/latex/supervised/gradient-boosting.tex
+++ b/shared/latex/supervised/gradient-boosting.tex
@@ -27,7 +27,7 @@
 \begin{frame}
   \frametitle{Avantages}
   \begin{itemize}
-  \item modèle extrêmement performant et versatile
+  \item modèle extrêmement performant et polyvalent
   \item entraînement parallélisable
   \end{itemize}
 \end{frame}
