--- a/shared/latex/supervised/random-forest.tex
+++ b/shared/latex/supervised/random-forest.tex
@@ -51,6 +51,6 @@
   \item les arbres sont interprétables, rapides à entraîner,
     combinables.
   \item random forest combine des arbres faibles en un prédicteur
-    versatile
+    polyvalent
   \end{itemize}
 \end{frame}
