Fix MMD duplicates & some tweaks
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/nlp/tp-text-features-engineering.tex
+++ b/shared/latex/nlp/tp-text-features-engineering.tex
@@ -1,11 +1,6 @@
-\begin{frame}{Instructions --- Spacy}
-  \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1a44THAYDDkNJXsPsUQTAi1XaZYnFJER5\#forceEdit=true&sandboxMode=true}{Découverte de l'API d'analyse de texte de Spacy}
-  \end{center}
-\end{frame}
-
-\begin{frame}{Instructions --- TF-IDF \& LSA}
-  \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1o5UYCkc7CQFN45kH1y3vEMba7ojFQ6cA\#forceEdit=true&sandboxMode=true}{Utilisation de TF-IDF et LSA}
-  \end{center}
+\begin{frame}{Travaux pratiques}
+  \begin{enumerate}
+    \item \bluelink{https://colab.research.google.com/drive/1a44THAYDDkNJXsPsUQTAi1XaZYnFJER5\#forceEdit=true&sandboxMode=true}{Instructions --- découverte de l'API d'analyse de texte de Spacy}
+    \item \bluelink{https://colab.research.google.com/drive/1o5UYCkc7CQFN45kH1y3vEMba7ojFQ6cA\#forceEdit=true&sandboxMode=true}{Instructions --- utilisation de TF-IDF et LSA}
+  \end{enumerate}
 \end{frame}
