--- a/shared/latex/nlp/tp-wordembeddings.tex
+++ b/shared/latex/nlp/tp-wordembeddings.tex
@@ -1,7 +1,4 @@
 
-  \begin{frame}{Instructions --- Word embeddings}
-    \begin{center}
-      \bluelink{https://colab.research.google.com/drive/1oshKbI0PQVk2VgubEmY7p7N5OH3hdEN3\#forceEdit=true&sandboxMode=true}{Utilisation de word embeddings}
-    \end{center}
-  \end{frame}
-  
+\begin{frame}{Travaux pratiques}
+  \bluelink{https://colab.research.google.com/drive/1oshKbI0PQVk2VgubEmY7p7N5OH3hdEN3\#forceEdit=true&sandboxMode=true}{Instructions}
+\end{frame}
