--- a/shared/latex/nn/rnn/tp.tex
+++ b/shared/latex/nn/rnn/tp.tex
@@ -1,7 +1,7 @@
-\begin{frame}{Instructions}
+\begin{frame}{Travaux pratiques}
   \begin{enumerate}
-    \item \bluelink{https://colab.research.google.com/drive/1fL6j4ylF6Mbs7o9d0nLO8Y4LxA11uoBD\#forceEdit=true&sandboxMode=true}{Génération de texte de Voltaire}
-    \item \bluelink{https://colab.research.google.com/drive/1v27jFJB-auN45fiYcRDeEw8ZO2FawE13\#forceEdit=true&sandboxMode=true}{Implémentation d'un calculateur}
-    \item \bluelink{https://colab.research.google.com/drive/1tTcEZ55g7dYbDkX2IWmJpvjBcKLbvBV9\#forceEdit=true&sandboxMode=true}{Classification de texte}
+    \item \bluelink{https://colab.research.google.com/drive/1fL6j4ylF6Mbs7o9d0nLO8Y4LxA11uoBD\#forceEdit=true&sandboxMode=true}{Instructions --- génération de texte de Voltaire}
+    \item \bluelink{https://colab.research.google.com/drive/1v27jFJB-auN45fiYcRDeEw8ZO2FawE13\#forceEdit=true&sandboxMode=true}{Instructions --- implémentation d'un calculateur}
+    \item \bluelink{https://colab.research.google.com/drive/1tTcEZ55g7dYbDkX2IWmJpvjBcKLbvBV9\#forceEdit=true&sandboxMode=true}{Instructions --- classification de texte}
   \end{enumerate}
 \end{frame}
