--- a/shared/latex/supervised/tp-random-forest.tex
+++ b/shared/latex/supervised/tp-random-forest.tex
@@ -1,5 +1,3 @@
-\begin{frame}{Instructions}
-  \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1ooL-E238TCsFQURfnKGY9uqjyXqRqySl\#forceEdit=true&sandboxMode=true}{Régression avec Random Forest}
-  \end{center}
+\begin{frame}{Travaux pratiques}
+  \bluelink{https://colab.research.google.com/drive/1ooL-E238TCsFQURfnKGY9uqjyXqRqySl\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
