Fix 2 overflows in RNN section
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/nn/rnn/model.tex
+++ b/shared/latex/nn/rnn/model.tex
@@ -49,5 +49,5 @@
 \end{frame}
 
 \begin{frame}{Problème du gradient qui disparaît (vanishing gradient)}
-  \V{["tikz/optimization/vanishing-gradients-rnn", "tw", 0.7] | image}
+  \V{["tikz/optimization/vanishing-gradients-rnn", "th", 0.7] | image}
 \end{frame}
