--- a/shared/latex/nn/rnn/lstm.tex
+++ b/shared/latex/nn/rnn/lstm.tex
@@ -8,7 +8,7 @@
 \end{frame}
 
 \begin{frame}{Vanishing gradient résolu (ou presque)}
-  \V{["tikz/optimization/vanishing-gradients-lstm", "tw", 0.66] | image}
+  \V{["tikz/optimization/vanishing-gradients-lstm", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Détails théoriques}
